# projeto_gestao_estoque

./: .gitignore  README.md  app.py  config.py  dashboard2.0.html  pyproject.toml  run.py  visual_perfil.html
migrations/versions/: 35c29903742a_adiciona_image_file_com_server_default_.py  5f07f235c9ac_criação_inicial_das_tabelas_user_e_.py  c6e4baa0a7f5_criação_inicial_de_todas_as_tabelas.py
minha_app/: __init__.py  models.py
minha_app/auth/: __init__.py  forms.py  routes.py
minha_app/dashboard/: __init__.py  routes.py
minha_app/main/: __init__.py  routes.py
minha_app/purchases/: __init__.py  forms.py  routes.py
minha_app/static/css/: login_register.css
minha_app/templates/: base.html
minha_app/templates/auth/: auth_base.html  login.html  profile.html  register.html  request_reset.html  reset_password.html
minha_app/templates/dashboard/: dashboard.html
minha_app/templates/email/: reset_password.txt
minha_app/templates/main/: index.html
minha_app/templates/purchases/: add_purchase.html  edit_purchase.html  list_purchases.html
tests/: conftest.py  test_app.py  test_auth.py  test_dashboard.py  test_purchases.py
