[project]
name = "projeto-gestao-estoque"
version = "0.1.0"
description = ""
authors = [
    {name = "fillipeberssot95@hotmail.com",email = "fillipeberssot95@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "projeto_gestao_estoque", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
